# z

./: .clang-format  .clang-format-v2024-01  .gitignore  Makefile  README.md  readme.md  zion
.github/workflows/: adt.yml  c4.yml  c4c.yml  c4x.yml  dlink.yml  g5.yml  sat.yml  taocp.yml
adt/: Makefile  dlink.c  dlink.h  horn.c  horn.h  sds.c  sds.h  types.h  vec.c  vec.h
adt/horn/: makefile  readme.md
c4/: .gitignore  Makefile  README.md  TODO  bootstrap.sh  configure.py  makefile  readme.md  run.sh
c4/cc/: base.h  c4.cc  makefile  model.cc  model.h  policy.cc  policy.h
c4/cmd/: README.md  play_with_human.py
c4/ext/: Makefile  ctx.h  ext.cc  main.cc  model.cc  model.h  policy.h
c4/misc/: todo.txt
c4c/: Makefile  README.md  checksum.txt  main.c  reference_model.py  sha256sum.txt
dlink/: Cargo.toml  Makefile  README.md  dlink.c  dlink.go  dlink.h  go.mod  sudoku.c
dlink/cmd/: dlink.go
g5/: configure.py  go.mod  go.sum  makefile  readme.md  requirements.txt
genai/: Makefile
gpt/: Makefile
incub/: README.md
intelligence/: CLAUDE.md  Makefile
llm.c/: README.md  main.c
sat/: Makefile  README.md
taocp/: CLAUDE.md  Makefile  README.md
taocp/v4_algo_b_basic_backtrack_bit_vec/: Cargo.toml  Makefile  README.md  main.go  mk.tpl
taocp/v4_algo_b_basic_backtrack_bit_vec/cc/cmd/: main.cc
taocp/v4_algo_b_basic_backtrack_bit_vec/cmd/: main.cc
taocp/v4_algo_b_basic_backtrack_bit_vec/rs/: Makefile
taocp/v4_algo_b_basic_backtrack_bit_vec/src/: main.rs
ttt/: Makefile  README.md  README_antirez.md  go.mod  makefile  readme.md  ttt.c
(+365 files in other folders)
